<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ConverterFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/unit_type_textview_card_one"
                style="@style/Widget.UnitConverter.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/millilitres"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/tv_from"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_from"
                style="@style/Widget.UnitConverter.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/from"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/unit_type_textview_card_one"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/unit_type_textview_card_one" />

            <!--<ImageView
                android:id="@+id/icon_measure_card_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@id/unit_type_textview_card_one"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/unit_type_textview_card_one"
                app:srcCompat="@drawable/ic_measure" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_amount_text_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/unit_type_textview_card_one"
                app:layout_constraintTop_toBottomOf="@id/unit_type_textview_card_one">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_amount_edit_text"
                    style="@style/Widget.UnitConverter.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/light_blue_200_opacity55"
                    android:hint="@string/enter_the_amount"
                    android:inputType="numberDecimal"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/icon_replace_unit_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@id/card_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_one"
        app:srcCompat="@drawable/ic_replace_unit_types" />

    <!--The second cardView-->

    <androidx.cardview.widget.CardView
        android:id="@+id/card_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_replace_unit_types">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_to"
                style="@style/Widget.UnitConverter.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/to"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/unit_type_textview_card_two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/unit_type_textview_card_two" />

            <!--<ImageView
                android:id="@+id/icon_measure_card_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@id/unit_type_textview_card_two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/unit_type_textview_card_two"
                app:srcCompat="@drawable/ic_measure" />-->

            <TextView
                android:id="@+id/unit_type_textview_card_two"
                style="@style/Widget.UnitConverter.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/ounces"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@id/tv_to"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/result_text_view"
                style="@style/Widget.UnitConverter.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/result"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/unit_type_textview_card_two"
                app:layout_constraintTop_toBottomOf="@id/unit_type_textview_card_two" />

            <TextView
                android:id="@+id/final_result_text_view"
                style="@style/Widget.UnitConverter.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/result_text_view"
                app:layout_constraintTop_toBottomOf="@id/unit_type_textview_card_two"
                tools:text="12.065" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/icon_round_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_round_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_two" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_up_switch"
        style="@style/Widget.UnitConverter.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/round_up_the_result"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/icon_round_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon_round_up"
        app:layout_constraintTop_toTopOf="@id/icon_round_up" />

    <Button
        android:id="@+id/calculate_button"
        style="@style/Widget.UnitConverter.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/convert"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/round_up_switch"
        app:layout_constraintStart_toStartOf="@id/round_up_switch"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>